restyle the landing page and change the copy

--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "Let's get to work."
-  text = "Have a bold idea or unsolvable problem? We’d love to hear about it."
+  text = "Have a bold idea or unsolvable problem? We'd love to hear about it."
   text_css_class = "page-subfooter-text-col-narrow"
   cta_path = "/hire-us/"
   cta = "Contact Us"
