--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -42,6 +42,7 @@
 @mixin mb-5 { margin-bottom: 3rem !important; }
 @mixin mb-6 { margin-bottom: 4rem !important; }
 @mixin mb-7 { margin-bottom: 5rem !important; }
+@mixin mb-8 { margin-bottom: 6rem !important; }
 @mixin mb-10 { margin-bottom: 8rem !important; }
 @mixin ml-3 { margin-left: 1rem !important; }
 
