--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -32,6 +32,7 @@
 
   %mb-md-6 { @include mb-6; }
   %mb-md-7 { @include mb-7; }
+  %mb-md-8 { @include mb-8; }
   %mb-md-10 { @include mb-10; }
 
   %py-md-6 {
