--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -66,8 +66,15 @@
   table {
     @extend %table;
     @extend %table-bordered;
-    @extend %table-responsive;
     @extend %my-4;
+
+    @include media-breakpoint-down(sm) {
+      display: block;
+      width: 100%;
+      border: 0;
+      overflow-x: auto;
+      -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
   }
 }
 
