add hubzone notice

--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -74,6 +74,7 @@
 %p-3 { @extend .p-3; }
 %px-0 { @extend .px-0; }
 %px-3 { @extend .px-3; }
+%py-1 { @extend .py-1; }
 %py-2 { @extend .py-2; }
 %py-3 { @extend .py-3; }
 %py-4 { @extend .py-4; }
