add building icon next to hubzone notice

--- a/_includes/notice_bar.html
+++ b/_includes/notice_bar.html
@@ -1,3 +1,4 @@
 <div class="notice-bar">
-  <p>A certified HUBZone company</p>
+  <i class="fa fa-building-o" aria-hidden="true" title="Building Icon"></i>
+  <span>A certified HUBZone company</span>
 </div>
