--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -40,6 +40,7 @@
 %mt-sm-5 { @extend .mt-sm-5; }
 %mt-md-4 { @extend .mt-md-4; }
 %mt-md-5 { @extend .mt-md-5; }
+%mr-1 { @extend .mr-1; }
 %mr-2 { @extend .mr-2; }
 %mr-sm-2 { @extend .mr-sm-2; }
 %mr-sm-5 { @extend .mr-sm-5; }
