--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,7 +1,13 @@
-{% if include.header_css_class %}
-  {% assign header_css_class = include.header_css_class %}
+{% if include.header_class %}
+  {% assign header_class = include.header_class %}
 {% else %}
-  {% assign header_css_class = 'page-header-2' %}
+  {% assign header_class = 'page-header-2' %}
+{% endif %}
+
+{% if include.header_title_class %}
+  {% assign header_title_class = include.header_title_class %}
+{% else %}
+  {% assign header_title_class = 'page-header-title-1' %}
 {% endif %}
 
 {% if include.header_title %}
@@ -16,20 +22,18 @@
   {% assign header_content = include.header_content %}
 {% endif %}
 
-<div class="{{header_css_class}}">
-  <header>
-    <h1>{{header_title}}</h1>
+<header class="{{header_class}}">
+  <div class="row">
+    <div class="{{header_title_class}}">
+      <h1>{{header_title}}</h1>
+    </div>
+  </div>
 
-    {% if include.header_content_class and header_content %}
-      <div class="row">
-        <div class="{{include.header_content_class}}">
-          <p>{{header_content}}</p>
-
-          {% if include.header_content_img %}
-            <img src="{{include.header_content_img}}" alt="{{include.header_content_img_description}}">
-          {% endif %}
-        </div>
+  {% if include.header_content_class and header_content %}
+    <div class="row">
+      <div class="{{include.header_content_class}}">
+        <p>{{header_content}}</p>
       </div>
-    {% endif %}
-  </header>
-</div>
+    </div>
+  {% endif %}
+</header>
