--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,3 +1,8 @@
+{% include page_header.html
+  header_title_class = 'page-header-title-2'
+  header_content_class = 'page-header-content-3'
+%}
+
 <div class="project-case-study">
   <div class="project-case-study-row">
     <article class="project-case-study-col">
