--- a/_includes/card_list.html
+++ b/_includes/card_list.html
@@ -19,14 +19,14 @@
   <div class="{{prefix}}s-row {{hanging_col_size_css_class}}">
     {% for item in collection | limit: limit %}
       <article class="{{prefix}}-col">
-        <div class="{{prefix}}-card card-link" data-href="{{item.permalink}}">
+        <div class="{{prefix}}-card card-link" data-href="{{item.permalink}}" tabindex="-1">
           <div role="img" class="{{prefix}}-img" style="background-image: url({{item.image}});" title="{{item.image_description}}"></div>
           <div class="{{prefix}}-block">
             <h3 class="{{prefix}}-title {{context}}">{{item.title}}</h3>
             <p class="{{prefix}}-text">{{item.excerpt}}</p>
           </div>
           <div class="{{prefix}}-footer">
-            <a href="{{item.permalink}}">
+            <a href="{{item.permalink}}" tabindex="0">
               <span>{{cta_text}}</span>
               <i class="fa fa-2x fa-long-arrow-right" aria-hidden="true"></i>
             </a>
