fix size of service icon images at various breakpoints

--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -34,8 +34,14 @@
 }
 
 .service-area-img {
-  @extend %card-img-top;
-  @extend %img-fluid;
+  @extend %mx-auto;
+  width: 240px;
+  height: 171px;
+
+  @include media-breakpoint-up(lg) {
+    width: 285px;
+    height: 203px;
+  }
 }
 
 .service-area-block {
