shrink the notice bar a bit

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -125,8 +125,7 @@
      },
      "foundingDate": "2016",
      "founders": [
-        { "@type": "Person", "name": "Sean Johnson" },
-        { "@type": "Person", "name": "Chris Cairns" }
+        { "@type": "Person", "name": "Sean Johnson" }
       ],
      "address": {
        "@type": "PostalAddress",
