--- a/_includes/notice_bar.html
+++ b/_includes/notice_bar.html
@@ -1,4 +1,8 @@
 <div class="notice-bar">
-  <i class="fa fa-building-o" aria-hidden="true" title="Building Icon"></i>
-  <span>A certified HUBZone company</span>
+  <div class="notice-bar-row">
+    <div class="notice-bar-col">
+      <i class="fa fa-building-o" aria-hidden="true" title="Building Icon"></i>
+      <span>A certified HUBZone company</span>
+    </div>
+  </div>
 </div>
