--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -103,6 +103,7 @@ $font-size-small: 1rem;
 $font-size-x-small: .95rem;
 $font-size-xx-small: .9rem;
 $font-size-xxx-small: .85rem;
+$font-size-xxxx-small: .8rem;
 
 // Bootstrap overrides
 //
