--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -175,8 +175,8 @@ $input-color-placeholder: $gray-lighter;
 
 // Buttons
 $btn-primary-color: $white;
-$btn-primary-bg: $brand-primary;
-$btn-primary-border: $brand-primary;
+$btn-primary-bg: $flame-pea;
+$btn-primary-border: $flame-pea;
 
 $btn-secondary-color: $brand-primary;
 $btn-secondary-bg: $white;
