--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -75,6 +75,7 @@
 %p-3 { @extend .p-3; }
 %px-0 { @extend .px-0; }
 %px-3 { @extend .px-3; }
+%py-0 { @extend .py-0; }
 %py-1 { @extend .py-1; }
 %py-2 { @extend .py-2; }
 %py-3 { @extend .py-3; }
