--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -6,17 +6,16 @@
   @extend %jumbotron;
   @extend %jumbotron-fluid;
   @extend %mb-0;
-  background-image: linear-gradient(rgba(0, 0, 5, .75), rgba(0, 0, 5, .75)), url('../img/buzzword-stickies.jpg');
+  background-image: url('../img/government-digitization.png');
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
 .landing-jumbotron-content {
   @extend %container;
-  @extend %mt-md-4;
-  @extend %mb-md-7;
   @extend %py-4;
   @extend %py-md-5;
-  background: radial-gradient(rgba(0, 0, 5, .5) 40%, rgba(0, 0, 5, 0) 70%);
   color: $jumbotron-color;
 
   h1 {
