--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -23,7 +23,8 @@
 }
 
 @include semantic-card('employee', $clickable: false, $title-alignment: center,
-  $title-color: $body-color, $subtitle-color: $text-muted, $footer-border-off: false);
+  $title-color: $body-color, $subtitle-color: $text-muted, $footer-border-off: false,
+  $card-img-height: 275px);
 
 @include multi-col-spacing('employee-col', $mb-size: 4, $mb-md-size: 5);
 
