rework the landing page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,11 @@
   <div class="footer-content">
     <div class="footer-row">
       <div class="footer-brand-col">
-        <a href="/">Skylight</a>
+        <a href="/about/#hubzone">HUBZone Certified</a>
       </div>
 
       <nav class="footer-nav-col">
-        <ul>
+        <ul class="">
           <li><a href="/hire-us/">Hire Us</a></li>
           <li><a href="/join/">Join Us</a></li>
           <li><a href="/alliances/">Alliances</a></li>
