--- a/_includes/project.html
+++ b/_includes/project.html
@@ -160,8 +160,8 @@
           {% endcapture %}
 
           {% if page.project_url and page.source_code_url %}
-            <div>{{project_link_markup}}</div>
-            <div>{{source_code_link_markup}}</div>
+            <div class="work-example-cta-wrapper">{{project_link_markup}}</div>
+            <div class="work-example-cta-wrapper">{{source_code_link_markup}}</div>
           {% elsif page.project_url %}
             {{project_link_markup}}
           {% else %}
