--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -264,6 +264,11 @@ $card-box-shadow: 0 1px 9px rgba(0, 0, 0, .3);
 $modal-header-color: $brand-primary;
 
 // Footer
+$footer-brand-width-sm-down: 158px;
+$footer-brand-height-sm-down: 50px;
+$footer-brand-width: 190px;
+$footer-brand-height: 60px;
+
 $footer-nav-link-color: $body-color;
 $footer-nav-link-hover-color: $brand-primary;
 $footer-nav-link-border: 1px dotted $footer-nav-link-color;
