--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -10,10 +10,12 @@
 }
 
 // Brand
-@mixin logo($width: $nav-brand-width, $height: $nav-brand-height, $version: 'logo') {
+@mixin brandmark($width: $nav-brand-width, $height: $nav-brand-height,
+  $width-sm-down: $nav-brand-width-sm-down, $height-sm-down: $nav-brand-height-sm-down,
+  $filename: 'logo') {
   @extend %d-block;
-  background: url('/img/#{$version}.png') no-repeat;
-  background: url('/img/#{$version}.svg') no-repeat;
+  background: url('/img/#{$filename}.png') no-repeat;
+  background: url('/img/#{$filename}.svg') no-repeat;
   height: $height;
   width: $width;
   background-size: contain;
@@ -27,8 +29,8 @@
   }
 
   @include media-breakpoint-down(sm) {
-    height: $nav-brand-height-sm-down;
-    width: $nav-brand-width-sm-down;
+    height: $height-sm-down;
+    width: $width-sm-down;
   }
 }
 
@@ -43,6 +45,7 @@
 @mixin mb-6 { margin-bottom: 4rem !important; }
 @mixin mb-7 { margin-bottom: 5rem !important; }
 @mixin mb-8 { margin-bottom: 6rem !important; }
+@mixin mb-9 { margin-bottom: 9rem !important; }
 @mixin mb-10 { margin-bottom: 8rem !important; }
 @mixin ml-3 { margin-left: 1rem !important; }
 
