--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -147,7 +147,11 @@
 %mx-auto { @extend .mx-auto; }
 %ml-auto { @extend .ml-auto; }
 
-%img-fluid { @extend .img-fluid; }
+%img-fluid {
+  @extend .img-fluid;
+  width: 100%;
+}
+
 %figure-img { @extend .figure-img; }
 %figure-caption { @extend .figure-caption; }
 %img-thumbnail { @extend .img-thumbnail; }
