fix footer margins; remove icon from landing page buttons

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -32,7 +32,8 @@
 }
 
 .footer-brand-col,
-.footer-nav-col {
+.footer-nav-col,
+.footer-contribute-cta-col {
   @extend %mb-3;
   @extend %mb-md-0;
 }
