--- a/_includes/intro_cta.html
+++ b/_includes/intro_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "Introduce yourself."
-  text = "Interested in Skylight, but not ready to apply? Get on our radar by dropping us an email."
+  text = "Interested in Skylight, but not ready to apply? Connect with us by dropping us an email."
   text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:hello@skylight.digital"
   cta = "Email Us"
