--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -1,5 +1,5 @@
 {% include cta.html
-  header = "Let's deliver together."
+  header = "Let's get to work."
   text = "Have a bold idea or unsolvable problem? We'd love to hear about it."
   text_css_class = "page-subfooter-text-col-narrow"
   cta_path = "/hire-us/"
