update quote; wire-up form submission

--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -8,9 +8,9 @@
           </p>
 
           <cite class="testimonial-cite">
-            <span class="testimonial-author">Abraham Lincoln</span>
-            <span class="testimonial-position">Former President</span>
-            <strong class="testimonial-org">United States of America</strong>
+            <span class="testimonial-author">Luke McCormack</span>
+            <span class="testimonial-position">Former Chief Information Officer</span>
+            <strong class="testimonial-org">Department of Homeland Security</strong>
           </cite>
         </blockquote>
       </div>
