should be canonical_url var

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -88,7 +88,7 @@
   <meta property="og:description" content="{{description}}">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="{{page_url}}">
+  <meta property="og:url" content="{{canonical_url}}">
   <meta property="og:image" content="{{image}}">
 
   <meta name="twitter:card" content="summary">
