add pd blog post; style and copy changes

--- a/_includes/service_area.html
+++ b/_includes/service_area.html
@@ -17,6 +17,7 @@
         {% for service_element in service_elements %}
           <div class="service-element-col">
             <div class="service-element-content-box">
+              <div class="divider-line" aria-hidden="true"></div>
               <h3>{{service_element.name}}</h3>
               <p>{{service_element.description}}</p>
             </div>
