--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -1,7 +1,7 @@
 {% include cta.html
   header = "Let's deliver together."
-  text = "Have a bold idea or unsolvable problem? We'd love to learn more about it."
-  text_css_class = "page-subfooter-text-col-narrow"
+  text = "Have a bold idea or unsolvable problem? We'd love to work with you on turning it into a public success story."
+  text_css_class = "page-subfooter-text-col"
   cta_path = "/hire-us/"
   cta = "Contact Us"
   icon_css_class = "fa fa-arrow-right"
