--- a/_sass/layout/_cta.scss
+++ b/_sass/layout/_cta.scss
@@ -4,8 +4,8 @@
   @extend %mt-md-6;
   @extend %py-4;
   @extend %py-md-5;
-  background-color: $page-cta-bg-color;
   color: $page-cta-color;
+  background-image: linear-gradient(-90deg, #003d58, #0073a4);
 }
 
 .page-subfooter-content {
