--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -1,7 +1,7 @@
 {% include cta.html
   header = "Let's deliver together."
-  text = "Have a bold idea or unsolvable problem? Experience results in days, not years."
-  text_css_class = "page-subfooter-text-col-narrow"
+  text = "No matter how bold the idea, or complex the problem, we work with you to deliver results in days, not years."
+  text_css_class = "page-subfooter-text-col"
   cta_path = "/hire-us/"
   cta = "Contact Us"
   icon_css_class = "fa fa-arrow-right"
