change divider style

--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -102,7 +102,7 @@
   div {
     @extend %mx-auto;
     @extend %mb-4;
-    border-top: 1px solid $brand-primary;
+    border-top: 1px solid $gray-lightest;
     width: 75%;
   }
 
