--- a/_sass/pages/_service_area.scss
+++ b/_sass/pages/_service_area.scss
@@ -20,7 +20,7 @@
 
 .service-element-content-box {
   @extend %text-left;
-  border-top: 1px solid $brand-primary;
+  border-top: 1px solid $gray-lightest;
   width: 90%;
 
   h3 {
