--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -91,6 +91,7 @@
 %pb-2 { @extend .pb-2; }
 %pb-3 { @extend .pb-3; }
 %pb-4 { @extend .pb-4; }
+%pb-5 { @extend .pb-5; }
 %pl-0 { @extend .pl-0; }
 %pl-1 { @extend .pl-1; }
 %p-0 { @extend .p-0; }
