--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -1,7 +1,8 @@
 <h2>Open positions</h2>
 
 <p>
-  Below are the roles that we're looking to hire for. If you don't see a position that fits you,
+  Below are the roles that we're looking to hire for. We're 100% open to freelancers who would
+  prefer to work on a contract basis. If you don't see a position that fits you,
   we'd still love to talk! <a href="/join/#application">Simply send us your info</a>.
 </p>
 
