--- a/_includes/head.html
+++ b/_includes/head.html
@@ -223,7 +223,7 @@
   <script src="/js/tether.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/jquery.scrolldepth.min.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js?v=2"></script>
 
   <!--[if lt IE 9]>
     <script src="/js/html5shiv.min.js"></script>
