--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "Let's deliver together."
-  text = "No matter how bold the idea or complex the problem, we work with you to deliver results in weeks, not years."
+  text = "However bold the idea or complex the problem, we work with you to deliver results in weeks, not years."
   text_css_class = "page-subfooter-text-col"
   cta_path = "/hire-us/"
   cta = "Contact Us"
