update available job openings

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -9,15 +9,8 @@
 <div class="open-positions-list">
   <ul>
     <li>
-      <a href="https://skylight.workable.com/j/05BDB925B0" target="_blank" title="View job posting for Experienced Ruby Developer">
-        Experienced Ruby Developer
-      </a>
-      <p>Washington DC</p>
-    </li>
-
-    <li>
-      <a href="https://skylight.workable.com/j/C08481F7E7" target="_blank" title="View job posting for Experienced Java Developer">
-        Experienced Java Developer
+      <a href="https://skylight.workable.com/jobs/604049" target="_blank" title="View job posting for Experienced DevOps Engineer">
+        Experienced DevOps Engineer
       </a>
       <p>Washington DC</p>
     </li>
