--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -144,7 +144,7 @@
 
   h3 {
     @extend %mb-2;
-    color: $flame-pea;
+    color: $brand-primary;
     font-size: $font-size-large;
 
     &:not(:first-child) {
