hide service images on xs devices

--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -179,3 +179,5 @@
 %table-responsive { @extend .table-responsive; }
 
 %blockquote { @extend .blockquote; }
+
+%hidden-xs-down { @extend .hidden-xs-down; }
