Add ID div around open posistion to jump page to that div

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -1,4 +1,6 @@
-<h2>Open positions</h2>
+<div id="open-positions">
+  <h2>Open positions</h2>
+</div>
 
 {% if site.data.open_positions[0] %}
   <p>
