--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -10,7 +10,7 @@
           <cite class="testimonial-cite">
             <span class="testimonial-author">Luke McCormack</span>
             <span class="testimonial-position">Former Chief Information Officer</span>
-            <strong class="testimonial-org">Department of Homeland Security</strong>
+            <span class="testimonial-org"><strong>Department of Homeland Security</strong></span>
           </cite>
         </blockquote>
       </div>
