add job new posting

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -1,6 +1,4 @@
-<div id="open-positions">
-  <h2>Open positions</h2>
-</div>
+<h2 id="open-positions">Open positions</h2>
 
 {% if site.data.open_positions[0] %}
   <p>
