Fixed how inner page nav was working

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -1,4 +1,4 @@
-<h2 id="open-positions">Open positions</h2>
+<h2 id="join-open-positions">Open positions</h2>
 
 {% if site.data.open_positions[0] %}
   <p>
