--- a/_sass/pages/_service_area.scss
+++ b/_sass/pages/_service_area.scss
@@ -26,6 +26,7 @@
     @extend %my-3;
     @extend %text-uppercase;
     @extend %text;
+    line-height: 1.5rem;
     font-size: $font-size-small;
   }
 
